crates/ruff_python_parser/tests/snapshots/invalid_syntax@case_expect_indented_block.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/case_expect_indented_block.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            11,
        ),
        range: 0..43,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        10,
                    ),
                    range: 0..42,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 19..26,
                            node_index: NodeIndex(
                                4,
                            ),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 24..25,
                                    node_index: NodeIndex(
                                        3,
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                2,
                                            ),
                                            range: 24..25,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [],
                        },
                        MatchCase {
                            range: 31..42,
                            node_index: NodeIndex(
                                9,
                            ),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 36..37,
                                    node_index: NodeIndex(
                                        6,
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                5,
                                            ),
                                            range: 36..37,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            8,
                                        ),
                                        range: 39..42,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    7,
                                                ),
                                                range: 39..42,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match subject:
2 |     case 1:
3 |     case 2: ...
  |     ^^^^ Syntax Error: Expected an indented block after `case` block
  |
